fixing layout overflow bugs

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -18,6 +18,10 @@
 @import 'join_us';
 @import 'footer';
 
+html, body {
+  width: 100%;
+  overflow-x: hidden;
+}
 
 body {
   font-family: Roboto, sans-serif;
